# k_means

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  sonar-project.properties
headers/: almost_equal_gtest.hpp  k_means.h  parser.hpp  thread_pool.hpp  types.h  utils.hpp
sources/: k_means.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
